--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,7 +10,8 @@
 @using FactuSystem.Shared
 @using FactuSystem.Data.Services
 @using FactuSystem.Data.Services.Interfaces
-
+@using System.Security.Claims;
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 @inject NavigationManager urlHelper;
 @inject IProductoServices productoServices;
