--- a/Pages/Category/Category.razor
+++ b/Pages/Category/Category.razor
@@ -1,5 +1,6 @@
 @page "/category"
 @attribute [Authorize]
+<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
 
 <style>
     /* Estilo para el contenedor de la tabla */
