--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -28,7 +28,7 @@
 </style>
 @if(Form)
 {
-    <PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
+    <PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
     <EditForm Model="facturaRequest" OnValidSubmit="Send">
         @*Disenar el espacio para el cliente o contacto a facturarle*@
         <div class="input-group mb-3">
