--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -30,7 +30,7 @@
         padding: 10px; /* Añadir espacio alrededor del texto */
     }
 </style>
-<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
+<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
 <h1 class="titulo-proveedores">Listado de Productos</h1>
 
 <div class="modal" style="display: @(showCard ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
