--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
 <div class=" d-flex flex-column" style="min-height: 100vh;">
     <div class="top-row ps-3 navbar navbar-dark" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">FactuSystem</a>
+            <a class="navbar-brand" href="">Yoja's Drinks & Heladería</a>
             <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
