--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -1,7 +1,7 @@
 @page "/proveedor"
 @inject IJSRuntime JSRuntime;
 @attribute [Authorize]
-<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
+<PageTitle>Yoja's Drinks & Heladería Los Paso</PageTitle>
 <style>
     /* Estilo para resaltar las filas al pasar el cursor */
     .table-hover tbody tr:hover {
@@ -65,7 +65,7 @@
                                 </span>
                             </div>
                             <input id="emailInput" type="email" class="form-control" placeholder="Email" 
-                            @bind-value="proveedorRequest.Email" required />
+                            @bind-value="proveedorRequest.Email" />
                         </div>
 
                        
@@ -94,7 +94,7 @@
                                 </span>
                             </div>
                             <input class="form-control" placeholder="Dirección" 
-                            @bind-value="proveedorRequest.Direccion" required />
+                            @bind-value="proveedorRequest.Direccion"/>
                         </div>
                     </div>
                     
